--- a/charts/matrix-stack/ci/pytest-well-known-values.yaml
+++ b/charts/matrix-stack/ci/pytest-well-known-values.yaml
@@ -14,7 +14,7 @@ haproxy:
   podSecurityContext:
     runAsGroup: 0
 ingress:
-  type: kubernetes-nginx
+  controllerType: kubernetes-nginx
 matrixAuthenticationService:
   enabled: false
 # To check that templating works against the ingress
