kubernetes-nginx -> ingress-nginx

--- a/charts/matrix-stack/ci/fragments/well-known-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/well-known-pytest-extras.yaml
@@ -9,7 +9,7 @@ global:
 serverName: "{{ $.Values.global.baseDomain }}"
 
 ingress:
-  controllerType: kubernetes-nginx
+  controllerType: ingress-nginx
 
 wellKnownDelegation:
   ingress:
