--- a/.github/workflows/artifact-hub.yml
+++ b/.github/workflows/artifact-hub.yml
@@ -21,9 +21,9 @@ jobs:
     # This will push the OCI artifact only on merges
     # As the checkout will push the PR Target commit hash
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4
 
-    - uses: oras-project/setup-oras@v1
+    - uses: oras-project/setup-oras@5c0b487ce3fe0ce3ab0d034e63669e426e294e4d  # v1
 
     - name: ORAS Login
       env:
