--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -24,20 +24,20 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - uses: actions/setup-go@v5
+    - uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34  # v5
       with:
         go-version: stable
 
-    - uses: golangci/golangci-lint-action@v6
+    - uses: golangci/golangci-lint-action@4696ba8babb6127d732c3c6dde519db15edab9ea  # v6
       with:
         working-directory: matrix-tools
         args: -v --show-stats --no-config --modules-download-mode readonly --timeout 5m
 
-    - uses: GoTestTools/gotestfmt-action@v2
+    - uses: GoTestTools/gotestfmt-action@8b4478c7019be847373babde9300210e7de34bfb  # v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -55,15 +55,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2  # v3
 
     - name: Checkout Repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Login to GHCR
-      uses: docker/login-action@v3
+      uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772  # v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
@@ -77,7 +77,7 @@ jobs:
 
     - name: Docker meta
       id: meta
-      uses: docker/metadata-action@v5
+      uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804  # v5
       with:
         images: |
           ${{ env.REGISTRY_IMAGE }}
@@ -92,7 +92,7 @@ jobs:
           org.opencontainers.image.licenses=AGPL-3.0-only OR LicenseRef-Element-Commercial
 
     - name: Build and Push Image
-      uses: docker/bake-action@v6
+      uses: docker/bake-action@4ba453fbc2db7735392b93edf935aaf9b1e8f747  # v6
       with:
         push: "${{ github.ref_type == 'tag' }}"
         files: |
