--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
@@ -33,7 +33,7 @@ jobs:
       run: |
         echo "$(poetry env info -p)/bin" >> "${GITHUB_PATH}"
 
-    - uses: azure/setup-helm@v4.3.0
+    - uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112  # v4.3.0
 
     - name: Set version
       run: |
@@ -51,7 +51,7 @@ jobs:
         fi
 
     - name: Login to GitHub Container Registry
-      uses: docker/login-action@v3
+      uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772  # v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
@@ -78,7 +78,7 @@ jobs:
 
         helm push matrix-stack-*.tgz oci://ghcr.io/${{ github.repository }}
 
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1  # v4
       with:
         name: helm-package
         path: |
@@ -98,12 +98,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Grab packaged chart
-      uses: actions/download-artifact@v4
+      uses: actions/download-artifactcc203385981b70ca67e1cc392babf9cc229d5806  # v4
       with:
         name: helm-package
         path: ./
@@ -119,7 +119,7 @@ jobs:
         echo "next-version=$next_version" >> $GITHUB_OUTPUT
 
     - name: Release
-      uses: softprops/action-gh-release@v2
+      uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda  # v2
       with:
         draft: true
         body_path: CHANGELOG.latest.md
@@ -135,7 +135,7 @@ jobs:
         touch newsfragments/.gitkeep
 
     - name: Create PR for next patch version
-      uses: peter-evans/create-pull-request@v7
+      uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e  # v7
       with:
         branch: "gha/bump-to-${{ steps.versions.outputs.next-version }}"
         base: "main"
