--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -78,7 +78,11 @@ jobs:
       run: |
         for values in charts/matrix-stack/ci/*values.yaml; do
           echo "Testing matrix-stack with $values";
-          helm template -f "$values" charts/matrix-stack | kubeconform -summary
+          helm template \
+              -f "$values" charts/matrix-stack \
+            | kubeconform \
+              -strict \
+              -summary
         done
 
     - name: Run checkov
