Make kubeconform aware of ServiceMonitor CRDs

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -79,8 +79,11 @@ jobs:
         for values in charts/matrix-stack/ci/*values.yaml; do
           echo "Testing matrix-stack with $values";
           helm template \
+              -a monitoring.coreos.com/v1/ServiceMonitor \
               -f "$values" charts/matrix-stack \
             | kubeconform \
+              -schema-location default \
+              -schema-location 'https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/{{.Group}}/{{.ResourceKind}}_{{.ResourceAPIVersion}}.json' \
               -strict \
               -summary
         done
