--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -103,7 +103,7 @@ jobs:
         ref: ${{ github.event.pull_request.head.sha }}
 
     - name: Grab packaged chart
-      uses: actions/download-artifactcc203385981b70ca67e1cc392babf9cc229d5806  # v4
+      uses: actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806  # v4
       with:
         name: helm-package
         path: ./
