Fix shellcheck issues in actions relating to globbing and word-splitting

--- a/.github/workflows/artifact-hub.yml
+++ b/.github/workflows/artifact-hub.yml
@@ -30,13 +30,13 @@ jobs:
         ORAS_USERNAME: ${{ github.actor }}
         ORAS_PASSWORD: ${{ github.token }}
       run: |
-          oras login ghcr.io -u $ORAS_USERNAME -p $ORAS_PASSWORD
+          oras login ghcr.io -u "$ORAS_USERNAME" -p "$ORAS_PASSWORD"
 
     - name: Push artifact-hub
       env:
         GITHUB_REPOSITORY: ${{ github.repository }}
       run: |
         oras push \
-          ghcr.io/${GITHUB_REPOSITORY}/matrix-stack:artifacthub.io \
+          "ghcr.io/${GITHUB_REPOSITORY}/matrix-stack:artifacthub.io" \
           --config /dev/null:application/vnd.cncf.artifacthub.config.v1+yaml \
           artifacthub-repo.yaml:application/vnd.cncf.artifacthub.repository-metadata.layer.v1.yaml
