--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -84,11 +84,11 @@ jobs:
         ns=$(kubectl --context kind-ess-helm get ns -l app.kubernetes.io/managed-by=pytest  -o jsonpath='{.items[].metadata.name}')
         resources=("pods" "deployments" "statefulsets" "services" "configmaps" "secrets" "ingresses" "persistentvolumes" "persistentvolumeclaims" "endpoints")
         for i in "${resources[@]}"; do
-          kubectl --context kind-ess-helm get $i -n $ns > ./ess-helm-logs/$i.txt
-          echo "----" >> ./ess-helm-logs/$i.txt
-          kubectl --context kind-ess-helm get $i -o yaml -n $ns >> ./ess-helm-logs/$i.txt
+          kubectl --context kind-ess-helm get "$i" -n "$ns" > "./ess-helm-logs/$i.txt"
+          echo "----" >> "./ess-helm-logs/$i.txt"
+          kubectl --context kind-ess-helm get "$i" -o yaml -n "$ns" >> "./ess-helm-logs/$i.txt"
         done
-        kubectl --context kind-ess-helm get events --sort-by=.metadata.creationTimestamp -n $ns > ./ess-helm-logs/events.txt
+        kubectl --context kind-ess-helm get events --sort-by=.metadata.creationTimestamp -n "$ns" > ./ess-helm-logs/events.txt
         kind delete cluster --name ess-helm
 
     - name: Upload logs
