--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -40,7 +40,7 @@ jobs:
         if [ "$GITHUB_REF_TYPE" = "tag" ]; then
           scripts/set_chart_version.sh "$GITHUB_REF_NAME"
         elif [ "$GITHUB_EVENT_NAME" = "pull_request" ] || [ "$GITHUB_EVENT_NAME" = "pull_request_target" ]; then
-            actual_pr_head_commit=$(cat "$GITHUB_EVENT_PATH" | yq --input-format json -r .pull_request.head.sha)
+            actual_pr_head_commit=$(yq --input-format json -r '.pull_request.head.sha' "$GITHUB_EVENT_PATH")
             version=$(yq '.version' charts/matrix-stack/Chart.yaml | sed "s/-dev/-sha$actual_pr_head_commit/")
             scripts/set_chart_version.sh "$version"
         elif [ "$GITHUB_EVENT_NAME" != "main" ]; then
