--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
-    - uses: matrix-org/setup-python-poetry@gaelg/poetry-venv
+    - uses: matrix-org/setup-python-poetry@a82e526ebef97ec2d5000e220beb07aaadfda595  # v1
       with:
         poetry-version: "1.8.5"
         python-version: "3.x"
