--- a/charts/matrix-stack/ci/pytest-synapse-values.yaml
+++ b/charts/matrix-stack/ci/pytest-synapse-values.yaml
@@ -33,6 +33,9 @@ synapse:
   checkConfigHook:
     annotations:
       has-no-service-monitor: "true"
+  extraArgs:
+    # Validate that any Synapse config that has a <foo>_path equivalent uses it
+    - --no-secrets-in-config
   extraEnv:
     - name: DEBUG_RENDERING
       value: "1"
