--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -94,7 +94,7 @@ jobs:
     - name: Build and Push Image
       uses: docker/bake-action@4ba453fbc2db7735392b93edf935aaf9b1e8f747  # v6
       with:
-        push: "${{ github.ref_type == 'tag' }}"
+        push: ${{ github.ref_type == 'tag' }}
         files: |
           docker-bake.hcl
           cwd://${{ steps.meta.outputs.bake-file }}
