synapse: allow to inject appservice registration from secrets

--- a/charts/matrix-stack/ci/fragments/synapse-secrets-externally.yaml
+++ b/charts/matrix-stack/ci/fragments/synapse-secrets-externally.yaml
@@ -12,3 +12,7 @@ synapse:
   signingKey:
     secret: "{{ $.Release.Name }}-synapse-external"
     secretKey: signingKey
+
+  appservices:
+  - secret: "{{ $.Release.Name }}-synapse-external"
+    secretKey: bridge_registration.yaml
