--- a/charts/matrix-stack/ci/synapse-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/synapse-secrets-externally-values.yaml
@@ -12,6 +12,9 @@ matrixAuthenticationService:
   enabled: false
 serverName: ess.localhost
 synapse:
+  appservices:
+    - secret: '{{ $.Release.Name }}-synapse-external'
+      secretKey: bridge_registration.yaml
   ingress:
     host: synapse.ess.localhost
   macaroon:
