--- a/charts/matrix-stack/ci/synapse-postgres-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/synapse-postgres-secrets-externally-values.yaml
@@ -20,6 +20,9 @@ postgres:
       secretKey: synapsePasswordShared
 serverName: ess.localhost
 synapse:
+  appservices:
+    - secret: '{{ $.Release.Name }}-synapse-external'
+      secretKey: bridge_registration.yaml
   ingress:
     host: synapse.ess.localhost
   macaroon:
