--- a/artifacthub-repo.yaml
+++ b/artifacthub-repo.yaml
@@ -8,4 +8,4 @@ owners:
     email: onprem-support@element.io
 ignore:
   - name: matrix-stack
-    version: "[0-9]+\\.[0-9]+\\.[0-9]+\\..+"
+    version: "[0-9]+\\.[0-9]+\\.[0-9]+.+"
