--- a/charts/matrix-stack/templates/element-call/sfu_jwt_secret.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_jwt_secret.yaml
@@ -9,10 +9,10 @@ SPDX-License-Identifier: AGPL-3.0-only
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ $.Release.Name }}-element-call
+  name: {{ $.Release.Name }}-element-call-sfu-jwt
   namespace: {{ $.Release.Namespace }}
   labels:
-    {{- include "element-io.element-call.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.element-call.sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
 type: Opaque
 data:
 {{- with .livekitKey }}
