add elementCall to ci fragments

--- a/charts/matrix-stack/ci/element-web-checkov-values.yaml
+++ b/charts/matrix-stack/ci/element-web-checkov-values.yaml
@@ -6,6 +6,8 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres don't have any required properties to be set and defaults to enabled
+elementCall:
+  enabled: false
 elementWeb:
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
