--- a/charts/matrix-stack/ci/quick-setup-letsencrypt-pg-external-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-letsencrypt-pg-external-values.yaml
@@ -8,6 +8,8 @@
 # initSecrets, postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
 certManager:
   clusterIssuer: letsencrypt-prod
+elementCall:
+  enabled: false
 elementWeb:
   ingress:
     host: chat.your.tld
