--- a/charts/matrix-stack/ci/quick-setup-wildcard-cert-pg-external-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-wildcard-cert-pg-external-values.yaml
@@ -6,6 +6,8 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
+elementCall:
+  enabled: false
 elementWeb:
   ingress:
     host: chat.your.tld
