--- a/charts/matrix-stack/ci/synapse-checkov-with-workers-values.yaml
+++ b/charts/matrix-stack/ci/synapse-checkov-with-workers-values.yaml
@@ -5,6 +5,8 @@
 # source_fragments: synapse-minimal.yaml synapse-some-workers-running.yaml synapse-checkov.yaml haproxy-checkov.yaml init-secrets-minimal.yaml init-secrets-checkov.yaml postgres-minimal.yaml postgres-checkov.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
+elementCall:
+  enabled: false
 elementWeb:
   enabled: false
 haproxy:
