pytest: basic manifests tests

--- a/charts/matrix-stack/templates/element-call/sfu_configmap.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_configmap.yaml
@@ -4,12 +4,15 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with .Values.elementCall.sfu -}}
+{{- with $.Values.elementCall -}}
+{{- if .enabled -}}
+{{- with .sfu -}}
+{{- if .enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.element-call.sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.element-call-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-element-call-sfu
   namespace: {{ $.Release.Namespace }}
 data:
@@ -37,4 +40,7 @@ data:
               )
           )
         ) }}
+{{- end -}}
+{{- end -}}
+{{- end -}}
 {{- end -}}
