--- a/charts/matrix-stack/templates/element-call/sfu_jwt_service_monitor.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_jwt_service_monitor.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with .Values.elementCall -}}
+{{- with $.Values.elementCall -}}
 {{- if .enabled -}}
 {{- if $.Capabilities.APIVersions.Has "monitoring.coreos.com/v1/ServiceMonitor" }}
 {{- if .serviceMonitors.enabled }}
@@ -12,7 +12,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{- include "element-io.element-call.sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.element-call-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-element-call-sfu-jwt
   namespace: {{ $.Release.Namespace }}
 spec:
