--- a/charts/matrix-stack/templates/element-call/sfu_jwt_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_jwt_serviceaccount.yaml
@@ -4,8 +4,8 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with .Values.elementCall -}}
+{{- with $.Values.elementCall -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "element-call.sfu-jwt")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "element-call-sfu-jwt")) }}
 {{- end -}}
 {{- end -}}
