--- a/charts/matrix-stack/templates/element-call/sfu_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_serviceaccount.yaml
@@ -4,8 +4,12 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with .Values.elementCall.sfu -}}
+{{- with $.Values.elementCall -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "element-call.sfu")) }}
+{{- with .sfu -}}
+{{- if .enabled -}}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "element-call-sfu")) }}
+{{- end -}}
+{{- end -}}
 {{- end -}}
 {{- end -}}
