--- a/charts/matrix-stack/templates/element-call/sfu_jwt_secret.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_jwt_secret.yaml
@@ -4,7 +4,7 @@ Copyright 2025 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with .Values.elementCall -}}
+{{- with $.Values.elementCall -}}
 {{- if .enabled -}}
 apiVersion: v1
 kind: Secret
@@ -12,18 +12,18 @@ metadata:
   name: {{ $.Release.Name }}-element-call-sfu-jwt
   namespace: {{ $.Release.Namespace }}
   labels:
-    {{- include "element-io.element-call.sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.element-call-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
 type: Opaque
 data:
 {{- with .livekitKey }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "elementCall.livekitKey" "initIfAbsent" true)) }}
-{{- with .value }}
+{{- with $.Value }}
   LIVEKIT_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
 {{- with .livekitSecret }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "elementCall.livekitSecret" "initIfAbsent" true)) }}
-{{- with .value }}
+{{- with $.Value }}
   LIVEKIT_SECRET: {{ . | b64enc }}
 {{- end -}}
 {{- end -}}
