--- a/charts/matrix-stack/templates/element-call/sfu_jwt_service.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_jwt_service.yaml
@@ -4,14 +4,14 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with .Values.elementCall -}}
+{{- with $.Values.elementCall -}}
 {{- if .enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.element-call.sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-element-call
+    {{- include "element-io.element-call-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-element-call-sfu-jwt
   namespace: {{ $.Release.Namespace }}
 spec:
   type: ClusterIP
