--- a/charts/matrix-stack/templates/element-call/sfu_service.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_service.yaml
@@ -4,13 +4,15 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with .Values.elementCall.sfu -}}
+{{- with $.Values.elementCall -}}
+{{- if .enabled -}}
+{{- with .sfu -}}
 {{- if .enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.element-call.sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.element-call-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-element-call-sfu
   namespace: {{ $.Release.Namespace }}
 spec:
@@ -21,5 +23,7 @@ spec:
     targetPort: http
   selector:
     app.kubernetes.io/instance: "{{ $.Release.Name }}-element-call-sfu"
+{{- end -}}
+{{- end -}}
 {{- end -}}
 {{- end -}}
