--- a/charts/matrix-stack/templates/element-call/sfu_deployment.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_deployment.yaml
@@ -38,7 +38,7 @@ spec:
         {{- toYaml . | nindent 8 }}
 {{- end }}
     spec:
-{{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "element-call" "deployment" true)) | nindent 6 }}
+{{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "element-call-sfu" "deployment" true "usesMatrixTools" true)) | nindent 6 }}
       initContainers:
       - name: render-config
 {{- with $.Values.matrixTools.image -}}
@@ -101,7 +101,7 @@ spec:
         - containerPort: 6789
           name: metrics
           protocol: TCP
-        - containerPort: 7887
+        - containerPort: 7880
           name: http
           protocol: TCP
         - containerPort: {{ .exposedServices.rtcTcp.port }}
