Synapse / MAS : Fix OIDC shared secret when using in helm values

--- a/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
@@ -9,12 +9,15 @@ SPDX-License-Identifier: AGPL-3.0-only
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ $.Release.Name }}-matrix-authentication-service
+  name: {{ include "element-io.matrix-authentication-service.secret-name" (dict "root" $ "context"  (dict "isHook" false)) }}
   namespace: {{ $.Release.Namespace }}
   labels:
     {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 4 }}
 type: Opaque
 data:
+{{- with (include "element-io.matrix-authentication-service.synapse-secret-data" (dict "root" $ "context" .)) }}
+{{- . | nindent 2 }}
+{{- end }}
 {{- with .additional }}
 {{- range $key := (. | keys | uniq | sortAlpha) }}
 {{- $prop := index $.Values.matrixAuthenticationService.additional $key }}
@@ -27,20 +30,6 @@ data:
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.postgres.password" "initIfAbsent" false)) }}
 {{- with .value }}
   POSTGRES_PASSWORD: {{ . | b64enc }}
-{{- end }}
-{{- end }}
-{{- if $.Values.synapse.enabled }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.synapseSharedSecret" "initIfAbsent" true)) }}
-{{- with .synapseSharedSecret }}
-{{- with .value }}
-  SYNAPSE_SHARED_SECRET: {{ . | b64enc }}
-{{- end }}
-{{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.synapseOIDCClientSecret" "initIfAbsent" true)) }}
-{{- with .synapseOIDCClientSecret }}
-{{- with .value }}
-  SYNAPSE_OIDC_CLIENT_SECRET: {{ . | b64enc }}
-{{- end }}
 {{- end }}
 {{- end }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "initIfAbsent" true)) }}
