--- a/charts/matrix-stack/templates/element-web/nginx_configmap.yaml
+++ b/charts/matrix-stack/templates/element-web/nginx_configmap.yaml
@@ -31,7 +31,7 @@ data:
         scgi_temp_path        /tmp/scgi_temp;
 
         include       /etc/nginx/mime.types;
-        default_type  application/octet-stream;
+        default_type  application/octet-stream;  # noqa
 
         server_tokens off;
 
