--- a/charts/matrix-stack/templates/element-call/sfu_configmap.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_configmap.yaml
@@ -19,27 +19,7 @@ data:
   config.yaml: |
     {{- tpl ($.Files.Get "configs/element-call/sfu/config.yaml.tpl") (dict "root" $ "context" .) | nindent 4 }}
   keys.yaml: |
-    {{ printf "{{ readfile \"/secrets/%s\" | quote }}" (
-          include "element-io.ess-library.init-secret-path" (
-              dict "root" $
-              "context" (dict
-                "secretPath" "elementCall.livekitKey"
-                "initSecretKey" "ELEMENT_CALL_LIVEKIT_KEY"
-                "defaultSecretName" (printf "%s-element-call" $.Release.Name)
-                "defaultSecretKey" "LIVEKIT_KEY"
-              )
-          )
-        ) }}: {{ printf "{{ readfile \"/secrets/%s\" | quote }}" (
-          include "element-io.ess-library.init-secret-path" (
-              dict "root" $
-              "context" (dict
-                "secretPath" "elementCall.livekitSecret"
-                "initSecretKey" "ELEMENT_CALL_LIVEKIT_SECRET"
-                "defaultSecretName" (printf "%s-element-call" $.Release.Name)
-                "defaultSecretKey" "LIVEKIT_SECRET"
-              )
-          )
-        ) }}
+    ${LIVEKIT_KEY}: ${LIVEKIT_SECRET}
 {{- end -}}
 {{- end -}}
 {{- end -}}
