--- a/charts/matrix-stack/templates/element-call/sfu_jwt_secret.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_jwt_secret.yaml
@@ -17,13 +17,13 @@ type: Opaque
 data:
 {{- with .livekitKey }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "elementCall.livekitKey" "initIfAbsent" true)) }}
-{{- with $.Value }}
+{{- with .value }}
   LIVEKIT_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
 {{- with .livekitSecret }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "elementCall.livekitSecret" "initIfAbsent" true)) }}
-{{- with $.Value }}
+{{- with .value }}
   LIVEKIT_SECRET: {{ . | b64enc }}
 {{- end -}}
 {{- end -}}
