--- a/charts/matrix-stack/templates/element-call/sfu_jwt_service_monitor.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_jwt_service_monitor.yaml
@@ -22,7 +22,7 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/part-of: matrix-stack
-      app.kubernetes.io/component: matrix-stack-rtc
+      app.kubernetes.io/component: matrix-stack-sfu-jwt
       app.kubernetes.io/instance: {{ $.Release.Name }}-element-call-sfu-jwt
 {{- end }}
 {{- end }}
